Configurações: rotas e api docs
