# storage/api-docs/api-docs.json
@@ -544,6 +544,126 @@
                 }
             }
         },
+        "/configurações": {
+            "get": {
+                "tags": [
+                    "Configuraçoes"
+                ],
+                "summary": "Listar ultimas configs",
+                "operationId": "getConfigs",
+                "responses": {
+                    "200": {
+                        "description": "Operação bem-sucedida"
+                    },
+                    "401": {
+                        "description": "Não Autenticado"
+                    },
+                    "403": {
+                        "description": "Proibido"
+                    }
+                }
+            }
+        },
+        "/configuracoes": {
+            "post": {
+                "tags": [
+                    "Configuraçoes"
+                ],
+                "summary": "Cadastrar uma novo configuração",
+                "description": "Cria um novo registro de configuração com os dados fornecidos.",
+                "operationId": "storeConfiguracao",
+                "requestBody": {
+                    "description": "Dados da configuração",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "logo": {
+                                        "type": "string",
+                                        "example": "url_to_logo.png"
+                                    },
+                                    "nome_empresa": {
+                                        "type": "string",
+                                        "example": "Nome da Empresa"
+                                    },
+                                    "telefone": {
+                                        "type": "string",
+                                        "example": "+5511999999999"
+                                    },
+                                    "titulo": {
+                                        "type": "string",
+                                        "example": "Título da Empresa"
+                                    },
+                                    "descricao": {
+                                        "type": "string",
+                                        "example": "Descrição da Empresa"
+                                    },
+                                    "textoFooter": {
+                                        "type": "string",
+                                        "example": "Texto do rodapé da Empresa"
+                                    },
+                                    "banner_app": {
+                                        "type": "string",
+                                        "example": "url_to_banner_app.png"
+                                    },
+                                    "banner_site": {
+                                        "type": "string",
+                                        "example": "url_to_banner_site.png"
+                                    },
+                                    "banner_site_mobile": {
+                                        "type": "string",
+                                        "example": "url_to_banner_site_mobile.png"
+                                    },
+                                    "segunda_sexta": {
+                                        "type": "boolean",
+                                        "example": true
+                                    },
+                                    "segunda_sexta_horario_inicio": {
+                                        "type": "string",
+                                        "example": "08:00"
+                                    },
+                                    "segunda_sexta_horario_fim": {
+                                        "type": "string",
+                                        "example": "18:00"
+                                    },
+                                    "sabado_domingo": {
+                                        "type": "boolean",
+                                        "example": true
+                                    },
+                                    "sabado_domingo_horario_inicio": {
+                                        "type": "string",
+                                        "example": "08:00"
+                                    },
+                                    "sabado_domingo_horario_fim": {
+                                        "type": "string",
+                                        "example": "18:00"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "configuração criado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro na requisição"
+                    },
+                    "401": {
+                        "description": "Não autenticado"
+                    },
+                    "403": {
+                        "description": "Proibido"
+                    },
+                    "422": {
+                        "description": "Erro de validação"
+                    }
+                }
+            }
+        },
         "/convenios": {
             "get": {
                 "tags": [
